HtmlCollapsiblePanel now extends EditableValueHolder, Fixes in SelectManyCheckboxAjax to not use HttpServletRequest and not use JDK1.5 specific methods.
git-svn-id: http://svn.apache.org/repos/asf/myfaces/tomahawk/trunk@329572 13f79535-47bb-0310-9956-ffa450edef68