@@ -17,8 +17,14 @@ package org.apache.myfaces.custom.collapsiblepanel;
 
 import javax.faces.component.html.HtmlPanelGroup;
 import javax.faces.component.UIComponent;
+import javax.faces.component.EditableValueHolder;
+import javax.faces.component.UIInput;
 import javax.faces.context.FacesContext;
 import javax.faces.el.ValueBinding;
+import javax.faces.el.MethodBinding;
+import javax.faces.validator.Validator;
+import javax.faces.event.ValueChangeListener;
+import javax.faces.convert.Converter;
 import java.util.Iterator;
 import java.io.IOException;
 
@@ -28,8 +34,9 @@ import java.io.IOException;
  * @version $Revision$ $Date$
  *
  */
-public class HtmlCollapsiblePanel extends HtmlPanelGroup
+public class HtmlCollapsiblePanel extends HtmlPanelGroup implements EditableValueHolder
 {
+    private UIInput _inputDelegate = new UIInput();
 
     //private static final Log log = LogFactory.getLog(HtmlCollapsiblePanel.class);
 
@@ -68,6 +75,11 @@ public class HtmlCollapsiblePanel extends HtmlPanelGroup
         }
     }
 
+    public String getClientId(FacesContext context)
+    {
+        return super.getClientId(context);
+    }
+
     public void processUpdates(FacesContext context)
     {
         initialiseVars(context);
@@ -79,29 +91,29 @@ public class HtmlCollapsiblePanel extends HtmlPanelGroup
 
     private void initialiseVars(FacesContext context)
     {
-        if(getCollapsedVar()!=null)
-        {
-            context.getExternalContext().getRequestMap().put(getCollapsedVar(),
-                            Boolean.valueOf(isCollapsed()));
-        }
-
         if(getVar()!=null)
         {
             context.getExternalContext().getRequestMap().put(getVar(),
-                            getValue());
+                            Boolean.valueOf(isCollapsed()));
+        }
+
+        if(getTitleVar()!=null)
+        {
+            context.getExternalContext().getRequestMap().put(getTitleVar(),
+                            getTitle());
         }
     }
 
     private void removeVars(FacesContext context)
     {
-        if(getCollapsedVar()!=null)
-        {
-            context.getExternalContext().getRequestMap().remove(getCollapsedVar());
-        }
-
         if(getVar()!=null)
         {
             context.getExternalContext().getRequestMap().remove(getVar());
+        }
+
+        if(getTitleVar()!=null)
+        {
+            context.getExternalContext().getRequestMap().remove(getTitleVar());
         }
     }
 
@@ -130,10 +142,9 @@ public class HtmlCollapsiblePanel extends HtmlPanelGroup
     public static final String COMPONENT_FAMILY = "javax.faces.Panel";
     private static final String DEFAULT_RENDERER_TYPE = "org.apache.myfaces.CollapsiblePanel";
 
-    private Boolean _collapsed = null;
-    private String _value = null;
     private String _var = null;
-    private String _collapsedVar = null;
+    private String _title = null;
+    private String _titleVar = null;
 
     public HtmlCollapsiblePanel()
     {
@@ -147,27 +158,56 @@ public class HtmlCollapsiblePanel extends HtmlPanelGroup
 
     public void setCollapsed(boolean collapsed)
     {
-        _collapsed = new Boolean(collapsed);
+        setValue(Boolean.valueOf(collapsed));
     }
 
     public boolean isCollapsed()
     {
-        if (_collapsed != null) return _collapsed.booleanValue();
-        ValueBinding vb = getValueBinding("collapsed");
-        Boolean v = vb != null ? (Boolean)vb.getValue(getFacesContext()) : null;
-        return v != null ? v.booleanValue() : DEFAULT_COLLAPSED;
+        Object value = getValue();
+
+        if(value instanceof Boolean)
+        {
+            return ((Boolean) value).booleanValue();
+        }
+
+        return true;
     }
 
-    public void setValue(String value)
+    public void setValue(Object value)
     {
-        _value = value;
+        _inputDelegate.setValue(value);
     }
 
-    public String getValue()
+    public Object getLocalValue()
     {
-        if (_value != null) return _value;
-        ValueBinding vb = getValueBinding("value");
+        return _inputDelegate.getLocalValue();
+    }
+
+    public Object getValue()
+    {
+        return _inputDelegate.getValue();
+    }
+
+    public Converter getConverter()
+    {
+        return _inputDelegate.getConverter();
+    }
+
+    public void setConverter(Converter converter)
+    {
+        _inputDelegate.setConverter(converter);
+    }
+
+    public String getTitle()
+    {
+        if (_title != null) return _title;
+        ValueBinding vb = getValueBinding("title");
         return vb != null ? (String)vb.getValue(getFacesContext()) : null;
+    }
+
+    public void setTitle(String title)
+    {
+        _title = title;
     }
 
     public void setVar(String var)
@@ -182,26 +222,28 @@ public class HtmlCollapsiblePanel extends HtmlPanelGroup
         return vb != null ? (String)vb.getValue(getFacesContext()) : null;
     }
 
-    public void setCollapsedVar(String collapsedVar)
+    public void setTitleVar(String titleVar)
     {
-        _collapsedVar = collapsedVar;
+        _titleVar = titleVar;
     }
 
-    public String getCollapsedVar()
+    public String getTitleVar()
     {
-        if (_collapsedVar != null) return _collapsedVar;
-        ValueBinding vb = getValueBinding("collapsedVar");
+        if (_titleVar != null) return _titleVar;
+        ValueBinding vb = getValueBinding("titleVar");
         return vb != null ? (String)vb.getValue(getFacesContext()) : null;
     }
+
+    //------------------ GENERATED CODE END ---------------------------------------
 
     public Object saveState(FacesContext context)
     {
         Object values[] = new Object[5];
         values[0] = super.saveState(context);
-        values[1] = _collapsed;
-        values[2] = _value;
+        values[1] = _inputDelegate.saveState(context);
+        values[2] = _title;
         values[3] = _var;
-        values[4] = _collapsedVar;
+        values[4] = _titleVar;
         return ((Object) (values));
     }
 
@@ -209,10 +251,109 @@ public class HtmlCollapsiblePanel extends HtmlPanelGroup
     {
           Object values[] = (Object[])state;
         super.restoreState(context, values[0]);
-        _collapsed = (Boolean)values[1];
-        _value = (String)values[2];
-        _var = (String) values[3];
-        _collapsedVar = (String) values[4];
+        _inputDelegate.restoreState(context, values[1]);
+        _title = (String)values[2];
+        _var = (String)values[3];
+        _titleVar = (String) values[4];
     }
-    //------------------ GENERATED CODE END ---------------------------------------
+
+    public Object getSubmittedValue()
+    {
+        return _inputDelegate.getSubmittedValue();
+    }
+
+    public void setSubmittedValue(Object submittedValue)
+    {
+        _inputDelegate.setSubmittedValue(submittedValue);
+    }
+
+    public boolean isLocalValueSet()
+    {
+        return _inputDelegate.isLocalValueSet();
+    }
+
+    public void setLocalValueSet(boolean localValueSet)
+    {
+        _inputDelegate.setLocalValueSet(localValueSet);
+    }
+
+    public boolean isValid()
+    {
+        return _inputDelegate.isValid();
+    }
+
+    public void setValid(boolean valid)
+    {
+        _inputDelegate.setValid(valid);
+    }
+
+    public boolean isRequired()
+    {
+        return _inputDelegate.isRequired();
+    }
+
+    public void setRequired(boolean required)
+    {
+        _inputDelegate.setRequired(required);
+    }
+
+    public boolean isImmediate()
+    {
+        return _inputDelegate.isImmediate();
+    }
+
+    public void setImmediate(boolean immediate)
+    {
+        _inputDelegate.setImmediate(immediate);
+    }
+
+    public MethodBinding getValidator()
+    {
+        return _inputDelegate.getValidator();
+    }
+
+    public void setValidator(MethodBinding validatorBinding)
+    {
+        _inputDelegate.setValidator(validatorBinding);
+    }
+
+    public MethodBinding getValueChangeListener()
+    {
+        return _inputDelegate.getValueChangeListener();
+    }
+
+    public void setValueChangeListener(MethodBinding valueChangeMethod)
+    {
+        _inputDelegate.setValueChangeListener(valueChangeMethod);
+    }
+
+    public void addValidator(Validator validator)
+    {
+        _inputDelegate.addValidator(validator);
+    }
+
+    public Validator[] getValidators()
+    {
+        return _inputDelegate.getValidators();
+    }
+
+    public void removeValidator(Validator validator)
+    {
+        _inputDelegate.removeValidator(validator);
+    }
+
+    public void addValueChangeListener(ValueChangeListener listener)
+    {
+        _inputDelegate.addValueChangeListener(listener);
+    }
+
+    public ValueChangeListener[] getValueChangeListeners()
+    {
+        return _inputDelegate.getValueChangeListeners();
+    }
+
+    public void removeValueChangeListener(ValueChangeListener listener)
+    {
+        _inputDelegate.removeValueChangeListener(listener);
+    }
 }
